Implement Microservices communication using Gateway [Borrow Book Cases]
